--- a/mvcProject/.project
+++ b/mvcProject/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>finalProject</name>
+	<name>mvcProject</name>
 	<comment></comment>
 	<projects>
 	</projects>
